[gd_scene load_steps=50 format=2]

[ext_resource path="res://Assets/Levels/7_Mountain/telescope.png" type="Texture" id=1]
[ext_resource path="res://Assets/Levels/7_Mountain/solidplatform.png" type="Texture" id=2]
[ext_resource path="res://Assets/Levels/7_Mountain/ground.png" type="Texture" id=3]
[ext_resource path="res://Assets/Levels/7_Mountain/Mountain_art.png" type="Texture" id=4]
[ext_resource path="res://Assets/Levels/7_Mountain/clouds.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Default.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Levels/7_Mountain/solidcliff.png" type="Texture" id=7]
[ext_resource path="res://Assets/Levels/7_Mountain/ring.png" type="Texture" id=8]
[ext_resource path="res://Assets/Agents/NPC/MountainCats/mountaincat_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/sbutton/S_Button_Press.png" type="Texture" id=10]
[ext_resource path="res://Assets/Levels/7_Mountain/stars.png" type="Texture" id=11]
[ext_resource path="res://Scenes/7_Mountain/Interact.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Chat.gd" type="Script" id=13]
[ext_resource path="res://Assets/Agents/NPC/MountainCats/mountaincat.png" type="Texture" id=14]
[ext_resource path="res://Assets/Agents/NPC/MountainCats/mountaincat_3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Agents/NPC/MountainCats/mountaincat_1.png" type="Texture" id=16]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 11 )
region = Rect2( 1000, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 11 )
region = Rect2( 2000, 0, 1000, 1000 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 11 )
region = Rect2( 3000, 0, 1000, 1000 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 47, 27 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 47, 0, 47, 27 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 26 ), SubResource( 25 ), SubResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 49, 49 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 15 )
region = Rect2( 49, 0, 49, 49 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 15 )
region = Rect2( 98, 0, 49, 49 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 15 )
region = Rect2( 147, 0, 49, 49 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 35 ), SubResource( 34 ), SubResource( 34 ), SubResource( 33 ), SubResource( 32 ), SubResource( 32 ), SubResource( 33 ), SubResource( 32 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 1.3
} ]

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 40, 52 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 16 )
region = Rect2( 40, 0, 40, 52 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 36 ), SubResource( 36 ), SubResource( 37 ), SubResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 1.3
} ]

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 16, 19 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 14 )
region = Rect2( 16, 0, 16, 19 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 263.429, 31.8784 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 363.695, 11.3206 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 417.327, 10.4514 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 143.323, 9.84888 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 259.303, 9.84888 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 264.105, 18.8103 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 333.22, 75.1597 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 14.0625, 259.238 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 549.106, 81.9512 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 94.5837, 127.792 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 10, 3000 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 108, 60 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 149, 97 )

[node name="Mountain" type="Node2D"]

[node name="BelowPlayer" type="ViewportContainer" parent="."]
margin_right = 5000.0
margin_bottom = 5000.0
mouse_filter = 2
stretch = true
stretch_shrink = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="BelowPlayer"]
size = Vector2( 1000, 1000 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Mountain_art" type="Sprite" parent="BelowPlayer/Viewport"]
z_index = 1
texture = ExtResource( 4 )
centered = false

[node name="ring" type="Sprite" parent="BelowPlayer/Viewport"]
z_index = 3
texture = ExtResource( 8 )
centered = false

[node name="telescope" type="Sprite" parent="BelowPlayer/Viewport"]
z_index = 3
texture = ExtResource( 1 )
centered = false

[node name="stars" type="AnimatedSprite" parent="BelowPlayer/Viewport"]
z_index = 2
frames = SubResource( 5 )
speed_scale = 0.2
playing = true
centered = false

[node name="Default" parent="." instance=ExtResource( 6 )]

[node name="Affogato" parent="Default" index="0"]
visible = true

[node name="Viewport" parent="Default/Affogato/ViewportContainer" index="0"]
render_target_update_mode = 3

[node name="Player" parent="Default" index="1"]
position = Vector2( 74, 4870.94 )

[node name="Camera2D" parent="Default/Player" index="0"]
zoom = Vector2( 1.5, 1.5 )
limit_right = 5000
limit_bottom = 5000

[node name="AnimatedSprite" parent="Default/Player/ViewportContainer/Viewport" index="0"]
frame = 23

[node name="AbovePlayer" type="ViewportContainer" parent="."]
margin_right = 5000.0
margin_bottom = 5000.0
mouse_filter = 2
stretch = true
stretch_shrink = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="AbovePlayer"]
size = Vector2( 1000, 1000 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="SleepingCat" type="AnimatedSprite" parent="AbovePlayer/Viewport"]
position = Vector2( 120, 275 )
z_index = 4
frames = SubResource( 27 )
playing = true

[node name="CatnipCat" type="AnimatedSprite" parent="AbovePlayer/Viewport"]
position = Vector2( 45, 279 )
z_index = 4
frames = SubResource( 28 )
frame = 12
playing = true

[node name="ThinkingCat" type="AnimatedSprite" parent="AbovePlayer/Viewport"]
position = Vector2( 189, 270 )
z_index = 4
frames = SubResource( 39 )
frame = 1
playing = true

[node name="SittingCat" type="AnimatedSprite" parent="AbovePlayer/Viewport"]
position = Vector2( 420, 476 )
z_index = 4
frames = SubResource( 31 )
frame = 1
playing = true

[node name="clouds" type="Sprite" parent="AbovePlayer/Viewport"]
texture = ExtResource( 5 )
centered = false

[node name="solidplatform" type="Sprite" parent="AbovePlayer/Viewport"]
texture = ExtResource( 2 )
centered = false

[node name="solidcliff" type="Sprite" parent="AbovePlayer/Viewport"]
texture = ExtResource( 7 )
centered = false

[node name="ground" type="Sprite" parent="AbovePlayer/Viewport"]
texture = ExtResource( 3 )
centered = false

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 0.833, 0.833 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Node2D"]
collision_layer = 7
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/StaticBody2D2"]
position = Vector2( 3000, -10 )
rotation = 1.5708
polygon = PoolVector2Array( 5945.85, 2997.91, 5933.5, 2945, 5892.64, 2857.73, 5795.42, 2703.05, 5767.08, 2653.15, 5717.46, 2568.17, 5643.73, 2477, 5597.4, 2417.98, 5527.99, 2329.88, 5468.77, 2241.67, 5421.92, 2172.17, 5390.36, 2110.3, 5349.58, 2028.72, 5288.13, 1966.21, 5265.35, 1899.99, 5256.36, 1757.98, 5244.01, 1637.32, 5213.14, 1575.02, 5161.5, 1509.5, 5146.31, 1481.07, 5129.38, 1403.12, 4989.83, 812.137, 4940.44, 682.685, 4941.56, 532.644, 4989.44, 343.253, 4999.85, 123.843, 4967.3, -83.8123, 4880.87, -316.723, 4825.87, -518.205, 4792.76, -721.932, 4778.18, -847.757, 4786.5, -1058.25, 4846.31, -1380.98, 4827.57, -1719.49, 4812.12, -1801.41, 4785.15, -2061.45, 4645.14, -2252.37, 4570.71, -2396.02, 4533.42, -2511.17, 4456.67, -2866.18, 4447.03, -2945.43, 4460.03, -2999.89, 4511.8, -2999.03, 4521.31, -2800.43, 4635.48, -2438.92, 4844.48, -2116.77, 4888.26, -1598.19, 4932.03, -711.443, 5088.06, 18.1575, 5039.79, 564.797, 5154.28, 1120.42, 5305.81, 1576.14, 5349.59, 1907.26, 5571.83, 2190.12, 5925.16, 2761.07, 5997.25, 2998.29 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/StaticBody2D2"]
position = Vector2( 1902.76, 3087.64 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Node2D/StaticBody2D2"]
position = Vector2( 2008.4, 3066.03 )
shape = SubResource( 7 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Node2D/StaticBody2D2"]
position = Vector2( 2008.4, 3001.2 )
shape = SubResource( 7 )
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Node2D/StaticBody2D2"]
position = Vector2( 2056.42, 2665.07 )
shape = SubResource( 8 )
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Node2D/StaticBody2D2"]
position = Vector2( 2056.42, 2599.04 )
shape = SubResource( 8 )
one_way_collision = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Node2D/StaticBody2D2"]
position = Vector2( 2454.98, 2312.12 )
shape = SubResource( 9 )
one_way_collision = true

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Node2D/StaticBody2D2"]
position = Vector2( 2050.42, 2387.76 )
shape = SubResource( 10 )
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Node2D/StaticBody2D2"]
position = Vector2( 1902.76, 2583.43 )
shape = SubResource( 11 )
one_way_collision = true

[node name="Walls" type="StaticBody2D" parent="Node2D"]
position = Vector2( 2048.93, 4438.25 )
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Walls"]
position = Vector2( -118.468, 615.335 )
shape = SubResource( 12 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Node2D/Walls"]
position = Vector2( 415.331, -1877.98 )
shape = SubResource( 13 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Node2D/Walls"]
position = Vector2( 1.48633, -2279.79 )
shape = SubResource( 14 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Node2D/Walls"]
position = Vector2( -2048.93, -4438.25 )
polygon = PoolVector2Array( 1859.96, 2076.94, 1874.12, 2013.7, 1900.55, 1980.67, 1973.23, 1971.23, 2100.18, 1976.42, 2214.39, 1997.66, 2338.98, 1990.58, 2399.76, 1962.79, 2432.42, 1959.9, 2495.8, 1944.78, 2549.82, 1944.78, 2569.03, 1962.79, 2599.04, 1962.79, 2599.04, 2075.63 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Node2D/Walls"]
position = Vector2( 418.053, -1408.24 )
shape = SubResource( 15 )

[node name="EndWalls" type="StaticBody2D" parent="Node2D" groups=[
"end",
]]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/EndWalls"]
position = Vector2( -10, 3000 )
shape = SubResource( 16 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/EndWalls"]
position = Vector2( 6010, 3000 )
shape = SubResource( 16 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Node2D/EndWalls"]
position = Vector2( 3000, 6010 )
rotation = 1.5708
shape = SubResource( 16 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Node2D/EndWalls"]
position = Vector2( 3000, -10 )
rotation = 1.5708
shape = SubResource( 16 )

[node name="GoUp" type="Area2D" parent="."]
position = Vector2( 1523.67, 4085.24 )
script = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="GoUp"]
position = Vector2( 10.0032, 0 )
shape = SubResource( 17 )

[node name="Button" type="Sprite" parent="GoUp"]
visible = false
position = Vector2( -65.7659, 0 )
scale = Vector2( 0.306122, 0.298077 )
texture = ExtResource( 10 )

[node name="GoDown" type="Area2D" parent="."]
position = Vector2( 1472.91, 2335.62 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="GoDown"]
position = Vector2( 108.749, 148 )
shape = SubResource( 17 )

[node name="Button" type="Sprite" parent="GoDown"]
visible = false
position = Vector2( 25.0032, 148 )
scale = Vector2( 0.306122, 0.298077 )
texture = ExtResource( 10 )

[node name="ToCreek" type="Area2D" parent="."]
position = Vector2( -75.4143, 4722.94 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToCreek"]
position = Vector2( 108, 148 )
shape = SubResource( 18 )

[node name="Button" type="Sprite" parent="ToCreek"]
visible = false
position = Vector2( 108, 74.874 )
scale = Vector2( 0.306122, 0.298077 )
texture = ExtResource( 10 )

[node name="SittingCat" type="Node2D" parent="."]
position = Vector2( 2106, 2372 )

[node name="ViewportContainer" type="ViewportContainer" parent="SittingCat"]
margin_left = -40.0
margin_top = -23.0
margin_right = 27.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 22.5, 12.5 )
mouse_filter = 2
stretch = true
stretch_shrink = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="SittingCat/ViewportContainer"]
size = Vector2( 16, 19 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Area2D" type="Area2D" parent="SittingCat"]
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SittingCat/Area2D"]
shape = SubResource( 24 )

[editable path="Default"]
[editable path="Default/Affogato"]
[editable path="Default/Player"]
